test/positive/xor.net
INPUT a, b
OUTPUT o1, o2, o3, o4
VAR a, b: 8, o1, o2: 8, o3: 8, o4: 5
IN
o1 = XOR a a
o2 = XOR b 0x0f
o3 = XOR 0x0f b
o4 = XOR 01101 0d42 : 5
