test/negative/too_big_bus_size.net
INPUT
OUTPUT b
VAR b: 128
IN
b = 0 : 128
